# fvapps

./: .envrc  .gitignore  README.md  TODO.md  flake.nix  pyproject.toml
.github/workflows/: lean_action_ci.yml
artefacts/baselines/solve-fvapps/: README.md  SolveFvapps.lean  lake-manifest.json  lakefile.toml
artefacts/baselines/solve-fvapps/SolveFvapps/: Basic.lean
artefacts/examples/: Spec.lean  circle.py  test_circle.py  test_string.py
artefacts/examples/string/: metadata.json  solution_clean.py
artefacts/human_baselines/train/0023/: Spec.lean  journal.txt  question.txt
artefacts/qa/: Main.lean  Qa.lean  lake-manifest.json  lakefile.toml
artefacts/qa/Qa/: Basic.lean
imp/: Imp.lean  README.md  lake-manifest.json  lakefile.lean
imp/Imp/: Expr.lean  Stmt.lean
imp/Imp/Expr/: Basic.lean  Delab.lean  Eval.lean  Syntax.lean
imp/Imp/Hoare/: Basic.lean
imp/Imp/Stmt/: BigStep.lean
llmfv/: .gitignore  README.md  example_agent_run.py  pyproject.toml  test_agent.py
llmfv/llmfv/: claude_prompting.py
llmfv/src/notebooks/: APPS-staring.ipynb
llmfv/src/scripts/: example_agent_run.py
llmfv/test/: example_func.py  test_agent.py
nb/: .gitignore  README.md  pyproject.toml
nb/src/nb/: APPS-staring.ipynb  __init__.py  claude_prompting.py
nb/test/: test_agent.py
src/: config.toml
src/baselines/: __init__.py  agents.py  anthropic_agent.py  baselines_config.py  baselines_config.toml  config.py  config.toml  deepseek.py  google_agent.py  huggingface_agent.py  openai_agent.py  types.py
src/baselines/prompt_imports/: bintree.Lean  palindromes.Lean
src/baselines/prompting/: proc_folder_to_string.py  tmp.txt
src/benchmark/: apps_utils.py  claude_prompting.py  prompting.py  utils.py
src/benchmark/agent/: agents.py  hypothesizer.py  preprocesser.py  sorryer.py  types.py
src/benchmark/postprocessing/: README.fvapps.md  jsonl.py  metadata.py
src/benchmark/testing/: __init__.py  agent.py  convert_units.py  plausibility.py  process.py  qa_agent_plausible.py  qa_agent_unit.py  qa_config.py  qa_config.toml
src/benchmark/utils/: apps.py  code_blocks.py  logger_setup.py  metadata.py
src/notebooks/: APPS-staring.ipynb  apps.ipynb  baselining.ipynb  fvapps.ipynb  talk.ipynb
src/notebooks/baselines/: Untitled.ipynb  baselining.ipynb  huggingface.ipynb  meta_collate.ipynb  observability.ipynb
src/notebooks/postprocessing/: analyze_benchmark_stats.ipynb  df.csv  hf.ipynb  observability.ipynb  observability2.ipynb  sample.ipynb
src/scripts/: apps_gen_hyp_tests.py  apps_preproc.py  baseline_claude.py  baseliner.py  baselines.py  baselines_config.py  baselines_config.toml  config.py  config.toml  example_agent_run.py  example_leanagent_run.py  fvapps.py  hf.sh  lean_counter.sh  populate_apps_sols.py  postprocess.py  preprocess.py  qa.py  setup_apps.sh
src/scripts/prompt_imports/: lean_changelog_46_to_412.txt  leetcode_examples.txt
src/talk/: main.typ  refs.bib
src/test/: test_apps_load.py  test_utils.py
src/website/: package-lock.json  package.json  pnpm-lock.yaml
src/website/src/app/: layout.tsx  page.tsx
src/website/src/app/sample/[id]/: page.tsx
src/website/src/components/: Homepage.tsx
src/website/src/utils/: hf.ts
test/: test_apps_load.py  test_utils.py
