[project]
name = "fvapps"
version = "0.1.0"
description = "Formally verified automated programming progress standard"
authors = [
    { name = "Quinn Dougherty", email = "quinnd@riseup.net" },
    { name = "Ronak Mehta", email = "ronakrm@gmail.com" }
]
dependencies = [
    "datasets>=2.21.0",
    "anthropic>=0.34.2",
    "python-dotenv>=1.0.1",
    "openai>=1.52.1",
    "jsonlines>=4.0.0",
    "transformers>=4.45.2",
    "torch>=2.5.0",
    "accelerate>=1.0.1",
    "google-generativeai>=0.8.3",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
example_pipeline = "scripts.example_agent_run:main"
hypgen_example = "scripts.example_agent_run:python_main"
leangen_example = "scripts.example_agent_run:lean_main"
preprocess = "scripts.preprocess:main"
fvapps = "scripts.fvapps:main"
postprocess = "scripts.postprocess:main"
baselines = "scripts.baselines:main"
qa_autoformalize = "scripts.qa:one"
qa_plausibilize = "scripts.qa:two"

[tool.rye]
managed = true
dev-dependencies = [
    "jupyter>=1.1.1",
    "black>=24.8.0",
    "pytest>=8.3.2",
    "hypothesis>=6.112.0",
    "matplotlib>=3.9.2",
    "seaborn>=0.13.2",
]
[tool.rye.scripts]
upload = { cmd = "./src/scripts/hf.sh"  }

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/benchmark", "src/baselines", "src/scripts"]

[tool.pytest.ini_options]
testpaths = [
  "src/test"
]
